# ZTE-router-reboot-watchdog

./: .gitignore  README.md  config.example.toml  pyproject.toml
deploy/: install.sh  zte-watchdog.env.example  zte-watchdog.service
tests/: test_cli.py  test_config.py  test_connectivity.py  test_gateway.py  test_health.py  test_metrics.py  test_notify.py  test_smoke.py  test_watchdog.py
zte_watchdog/: __init__.py  __main__.py  config.py  connectivity.py  gateway.py  health.py  metrics.py  notify.py  watchdog.py
