[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zte-watchdog"
version = "0.1.0"
description = "Watchdog that detects a hung ZTE MC801A session and reboots the gateway."
requires-python = ">=3.11"
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
zte-watchdog = "zte_watchdog.__main__:main"

[tool.setuptools.packages.find]
include = ["zte_watchdog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
